...
            Text("Welcome to Fitness Tracking")
                .font(.title)
                .foregroundColor(.purple)
                .padding(20)
            Spacer()
            
            Text("Login")
                .font(.largeTitle)
                .bold()
            
            TextField("Email", text: $email)
                .keyboardType(.emailAddress)
                .autocapitalization(.none)
...
                        .foregroundColor(.white)
                        .cornerRadius(10)
                        .padding(.horizontal)
                }
            }
            
            NavigationLink("Don't have an account? Sign Up", destination: SignUpView(authViewModel: authViewModel))
                .padding()
                .foregroundColor(.purple)
            
            Spacer()
        }
    }
...
