...
                
                Spacer()
                
                Button(action: {
                    showLogoutAlert = true
                }) {
                    Text("Logout")
                        .bold()
                        .padding()
                        .background(Color.red)
                        .foregroundColor(.white)
                        .cornerRadius(8)
                        .padding(.horizontal)
...
