...
            errorMessage = "The email address is invalid."
        case AuthErrorCode.emailAlreadyInUse.rawValue:
            errorMessage = "The email address is already in use by another account."
        case AuthErrorCode.networkError.rawValue:
            errorMessage = "Network error. Please try again later."
        case AuthErrorCode.invalidCredential.rawValue:
            errorMessage = "Invalid credentials, please check your email/password."
        default:
            errorMessage = "An error occurred. Please try again."
        }
    }
}

